# AI_for_lawyers

./: README.md  pyproject.toml
02_llm_call/: LLMs_API.ipynb  LLMs_local.ipynb  tokens.ipynb
04_bverfg_rag/: 02_bverfg_rag_api.ipynb  bverfg_urteil.xlsx  ~$bverfg_urteil.xlsx
